<resources>
    <string name="app_name">calculator</string>
    <string name="txt_start">0</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="refresh">AC</string>
    <string name="plas1">+</string>
    <string name="fraction">^</string>
    <string name="double2">*</string>
    <string name="division">/</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="lan">🌐</string>
</resources>